--- a/ui/index.html
+++ b/ui/index.html
@@ -272,9 +272,9 @@
             </div>
             <div class="sim-title-option dropdown-option">
                 <a href="/wotlk/deathknight/" class="">
-                    <img src="/wotlk/assets/img/death_knight_icon.jpg" class="sim-title-icon">
+                    <img src="/wotlk/assets/img/death_knight_icon.png" class="sim-title-icon">
                 </a>
-                <a href="/wotlk/deathknight/" class="sim-title-dropdown-option-container" style="color: rgb(144, 12, 188);">
+                <a href="/wotlk/deathknight/" class="sim-title-dropdown-option-container" style="color: rgb(194, 46, 70);">
                     <div class="sim-title-label-container">
                         <span class="sim-title-spec-label sim-title-label">DEATH KNIGHT</span>
                     </div>
