--- a/ui/index.html
+++ b/ui/index.html
@@ -280,6 +280,16 @@
                     </div>
                 </a>
             </div>
+            <div class="sim-title-option dropdown-option">
+                <a href="/wotlk/tank_deathknight/" class="">
+                    <img src="/wotlk/assets/img/death_knight_icon.png" class="sim-title-icon">
+                </a>
+                <a href="/wotlk/tank_deathknight/" class="sim-title-dropdown-option-container" style="color: rgb(194, 46, 70);">
+                    <div class="sim-title-label-container">
+                        <span class="sim-title-spec-label sim-title-label">DEATH KNIGHT TANK</span>
+                    </div>
+                </a>
+            </div>
             </a>
         </div>
     </div>
