--- a/ui/index.html
+++ b/ui/index.html
@@ -1,7 +1,9 @@
 <html>
 
 <head>
+    <title>Wowsims</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <script src="./index.ts" type="module"></script>
     <link rel="icon" type="image/x-icon" href="/wotlk/assets/favicon_io/favicon.ico">
     <style>
         a {
@@ -290,9 +292,7 @@
                     </div>
                 </a>
             </div>
-            </a>
         </div>
-    </div>
     </div>
 </body>
 
