--- a/ui/index_template.html
+++ b/ui/index_template.html
@@ -33,5 +33,5 @@
   <!--<script>const whTooltips = {colorLinks: true};</script>
   <script src="https://wow.zamimg.com/widgets/power.js"></script>-->
 	<script>const aowow_tooltips = {colorlinks: true}</script>
-	<script type="text/javascript" src="https://wotlkdb.com/static/widgets/power.js"></script>
+	<script type="text/javascript" src="https://wotlk.evowow.com/static/widgets/power.js"></script>
 </html>
