updated background for landing page

--- a/ui/index.html
+++ b/ui/index.html
@@ -81,7 +81,7 @@
 
         .bg-image {
             background-image: url("assets/img/wotlk.jpg");
-            filter: brightness(20%) blur(2px);
+            /* filter: brightness(20%) blur(2px); */
             height: 100%;
             background-position: center;
             background-repeat: no-repeat;
