--- a/ui/index_template.html
+++ b/ui/index_template.html
@@ -32,8 +32,8 @@
   <body id="bootstrap-overrides">
   </body>
   <!-- Load wowhead scripts after done loading everything else -->
-  <!--<script>const whTooltips = {colorLinks: true};</script>
-  <script src="https://wow.zamimg.com/widgets/power.js"></script>-->
-	<script>const aowow_tooltips = {colorlinks: true}</script>
-	<script type="text/javascript" src="https://wotlk.evowow.com/static/widgets/power.js"></script>
+  <script>const whTooltips = {colorLinks: true};</script>
+  <script src="https://wow.zamimg.com/widgets/power.js"></script>
+	<!--<script>const aowow_tooltips = {colorlinks: true}</script>
+	<script type="text/javascript" src="https://wotlk.evowow.com/static/widgets/power.js"></script>-->
 </html>
