ui/index: fix buttons clickable area  - buttons were only clickable on text/icon
Signed-off-by: jarves <jarveson@gmail.com>

--- a/ui/index.html
+++ b/ui/index.html
@@ -112,186 +112,150 @@
         </div>
         <hr style="width: 50%">
         <div class="dropdown-panel sim-title-dropdown within-raid-sim-hide">
-            <div class="sim-title-option dropdown-option" style="flex-basis:100%; justify-content: center; background-color: rgba(0, 0, 0, 0.5);">
-                <a href="/wotlk/raid/" class="">
+            <a href="/wotlk/raid/" class="sim-title-dropdown-option-container" style="flex-basis:100%; color:white">
+                <div class="sim-title-option dropdown-option" style="background-color: rgba(0, 0, 0, 0.5); justify-content: center;">
                     <img src="/wotlk/assets/img/raid_icon.png" class="sim-title-icon">
-                </a>
-                <a href="/wotlk/raid/" class="sim-title-dropdown-option-container" style="color: white;">
                     <div class="sim-title-label-container">
                         <span class="sim-title-spec-label sim-title-label">RAID</span>
                     </div>
-                </a>
-            </div>
-            <div class="sim-title-option dropdown-option">
-                <a href="/wotlk/balance_druid/" class="">
+                </div>
+            </a>
+            <a href="/wotlk/balance_druid/" class="sim-title-dropdown-option-container" style="color: rgb(255, 125, 10);">
+                <div class="sim-title-option dropdown-option">
                     <img src="/wotlk/assets/img/balance_druid_icon.png" class="sim-title-icon">
-                </a>
-                <a href="/wotlk/balance_druid/" class="sim-title-dropdown-option-container" style="color: rgb(255, 125, 10);">
                     <div class="sim-title-label-container">
                         <span class="sim-title-spec-label sim-title-label">BALANCE DRUID</span>
                     </div>
-                </a>
-            </div>
-            <div class="sim-title-option dropdown-option">
-                <a href="/wotlk/feral_druid/" class="">
+                </div>
+            </a>
+            <a href="/wotlk/feral_druid/" class="sim-title-dropdown-option-container" style="color: rgb(255, 125, 10);">
+                <div class="sim-title-option dropdown-option">
                     <img src="/wotlk/assets/img/feral_druid_icon.png" class="sim-title-icon">
-                </a>
-                <a href="/wotlk/feral_druid/" class="sim-title-dropdown-option-container" style="color: rgb(255, 125, 10);">
                     <div class="sim-title-label-container">
                         <span class="sim-title-spec-label sim-title-label">FERAL DRUID</span>
                     </div>
-                </a>
-            </div>
-            <div class="sim-title-option dropdown-option">
-                <a href="/wotlk/feral_tank_druid/" class="">
+                </div>
+            </a>
+            <a href="/wotlk/feral_tank_druid/" class="sim-title-dropdown-option-container" style="color: rgb(255, 125, 10);">
+                <div class="sim-title-option dropdown-option">
                     <img src="/wotlk/assets/img/feral_druid_tank_icon.png" class="sim-title-icon">
-                </a>
-                <a href="/wotlk/feral_tank_druid/" class="sim-title-dropdown-option-container" style="color: rgb(255, 125, 10);">
                     <div class="sim-title-label-container">
                         <span class="sim-title-spec-label sim-title-label">FERAL TANK DRUID</span>
                     </div>
-                </a>
-            </div>
-            <div class="sim-title-option dropdown-option">
-                <a href="/wotlk/hunter/" class="">
+                </div>
+            </a>
+            <a href="/wotlk/hunter/" class="sim-title-dropdown-option-container" style="color: rgb(171, 212, 115);">
+                <div class="sim-title-option dropdown-option">
                     <img src="/wotlk/assets/img/hunter_icon.png" class="sim-title-icon">
-                </a>
-                <a href="/wotlk/hunter/" class="sim-title-dropdown-option-container" style="color: rgb(171, 212, 115);">
                     <div class="sim-title-label-container">
                         <span class="sim-title-spec-label sim-title-label">HUNTER</span>
                     </div>
-                </a>
-            </div>
-            <div class="sim-title-option dropdown-option">
-                <a href="/wotlk/mage/" class="">
+                </div>
+            </a>
+            <a href="/wotlk/mage/" class="sim-title-dropdown-option-container" style="color: rgb(105, 204, 240);">
+                <div class="sim-title-option dropdown-option">
                     <img src="/wotlk/assets/img/mage_icon.png" class="sim-title-icon">
-                </a>
-                <a href="/wotlk/mage/" class="sim-title-dropdown-option-container" style="color: rgb(105, 204, 240);">
                     <div class="sim-title-label-container">
                         <span class="sim-title-spec-label sim-title-label">MAGE</span>
                     </div>
-                </a>
-            </div>
-            <div class="sim-title-option dropdown-option">
-                <a href="/wotlk/retribution_paladin/" class="">
+                </div>
+            </a>
+            <a href="/wotlk/retribution_paladin/" class="sim-title-dropdown-option-container" style="color: rgb(245, 140, 186);">
+                <div class="sim-title-option dropdown-option">
                     <img src="/wotlk/assets/img/retribution_icon.png" class="sim-title-icon">
-                </a>
-                <a href="/wotlk/retribution_paladin/" class="sim-title-dropdown-option-container" style="color: rgb(245, 140, 186);">
                     <div class="sim-title-label-container">
                         <span class="sim-title-spec-label sim-title-label">RETRIBUTION PALADIN</span>
                     </div>
-                </a>
-            </div>
-            <div class="sim-title-option dropdown-option">
-                <a href="/wotlk/protection_paladin/" class="">
+                </div>
+            </a>
+            <a href="/wotlk/protection_paladin/" class="sim-title-dropdown-option-container" style="color: rgb(245, 140, 186);">
+                <div class="sim-title-option dropdown-option">
                     <img src="/wotlk/assets/img/protection_paladin_icon.png" class="sim-title-icon">
-                </a>
-                <a href="/wotlk/protection_paladin/" class="sim-title-dropdown-option-container" style="color: rgb(245, 140, 186);">
                     <div class="sim-title-label-container">
                         <span class="sim-title-spec-label sim-title-label">PROTECTION PALADIN</span>
                     </div>
-                </a>
-            </div>
-            <div class="sim-title-option dropdown-option">
-                <a href="/wotlk/shadow_priest/" class="">
+                </div>
+            </a>
+            <a href="/wotlk/shadow_priest/" class="sim-title-dropdown-option-container" style="color: rgb(255, 255, 255);">
+                <div class="sim-title-option dropdown-option">
                     <img src="/wotlk/assets/img/shadow_priest_icon.png" class="sim-title-icon">
-                </a>
-                <a href="/wotlk/shadow_priest/" class="sim-title-dropdown-option-container" style="color: rgb(255, 255, 255);">
                     <div class="sim-title-label-container">
                         <span class="sim-title-spec-label sim-title-label">SHADOW PRIEST</span>
                     </div>
-                </a>
-            </div>
-            <div class="sim-title-option dropdown-option">
-                <a href="/wotlk/smite_priest/" class="">
+                </div>
+            </a>
+            <a href="/wotlk/smite_priest/" class="sim-title-dropdown-option-container" style="color: rgb(255, 255, 255);">
+                <div class="sim-title-option dropdown-option">
                     <img src="/wotlk/assets/img/smite_priest_icon.png" class="sim-title-icon">
-                </a>
-                <a href="/wotlk/smite_priest/" class="sim-title-dropdown-option-container" style="color: rgb(255, 255, 255);">
                     <div class="sim-title-label-container">
                         <span class="sim-title-spec-label sim-title-label">SMITE PRIEST</span>
                     </div>
-                </a>
-            </div>
-            <div class="sim-title-option dropdown-option">
-                <a href="/wotlk/rogue/" class="">
+                </div>
+            </a>
+            <a href="/wotlk/rogue/" class="sim-title-dropdown-option-container" style="color: rgb(255, 245, 105);">
+                <div class="sim-title-option dropdown-option">
                     <img src="/wotlk/assets/img/rogue_icon.png" class="sim-title-icon">
-                </a>
-                <a href="/wotlk/rogue/" class="sim-title-dropdown-option-container" style="color: rgb(255, 245, 105);">
                     <div class="sim-title-label-container">
                         <span class="sim-title-spec-label sim-title-label">ROGUE</span>
                     </div>
-                </a>
-            </div>
-            <div class="sim-title-option dropdown-option">
-                <a href="/wotlk/elemental_shaman/" class="">
+                </div>
+            </a>
+            <a href="/wotlk/elemental_shaman/" class="sim-title-dropdown-option-container" style="color: rgb(36, 89, 255);">
+                <div class="sim-title-option dropdown-option">
                     <img src="/wotlk/assets/img/elemental_shaman_icon.png" class="sim-title-icon">
-                </a>
-                <a href="/wotlk/elemental_shaman/" class="sim-title-dropdown-option-container" style="color: rgb(36, 89, 255);">
                     <div class="sim-title-label-container">
                         <span class="sim-title-spec-label sim-title-label">ELEMENTAL SHAMAN</span>
                     </div>
-                </a>
-            </div>
-            <div class="sim-title-option dropdown-option">
-                <a href="/wotlk/enhancement_shaman/" class="">
+                </div>
+            </a>
+            <a href="/wotlk/enhancement_shaman/" class="sim-title-dropdown-option-container" style="color: rgb(36, 89, 255);">
+                <div class="sim-title-option dropdown-option">
                     <img src="/wotlk/assets/img/enhancement_shaman_icon.png" class="sim-title-icon">
-                </a>
-                <a href="/wotlk/enhancement_shaman/" class="sim-title-dropdown-option-container" style="color: rgb(36, 89, 255);">
                     <div class="sim-title-label-container">
                         <span class="sim-title-spec-label sim-title-label">ENHANCEMENT SHAMAN</span>
                     </div>
-                </a>
-            </div>
-            <div class="sim-title-option dropdown-option">
-                <a href="/wotlk/warlock/" class="">
+                </div>
+            </a>
+            <a href="/wotlk/warlock/" class="sim-title-dropdown-option-container" style="color: rgb(148, 130, 201);">
+                <div class="sim-title-option dropdown-option">
                     <img src="/wotlk/assets/img/warlock_icon.png" class="sim-title-icon">
-                </a>
-                <a href="/wotlk/warlock/" class="sim-title-dropdown-option-container" style="color: rgb(148, 130, 201);">
                     <div class="sim-title-label-container">
                         <span class="sim-title-spec-label sim-title-label">WARLOCK</span>
                     </div>
-                </a>
-            </div>
-            <div class="sim-title-option dropdown-option">
-                <a href="/wotlk/warrior/" class="">
+                </div>
+            </a>
+            <a href="/wotlk/warrior/" class="sim-title-dropdown-option-container" style="color: rgb(199, 156, 110);">
+                <div class="sim-title-option dropdown-option">
                     <img src="/wotlk/assets/img/warrior_icon.png" class="sim-title-icon">
-                </a>
-                <a href="/wotlk/warrior/" class="sim-title-dropdown-option-container" style="color: rgb(199, 156, 110);">
                     <div class="sim-title-label-container">
                         <span class="sim-title-spec-label sim-title-label">WARRIOR</span>
                     </div>
-                </a>
-            </div>
-            <div class="sim-title-option dropdown-option">
-                <a href="/wotlk/protection_warrior/" class="">
+                </div>
+            </a>
+            <a href="/wotlk/protection_warrior/" class="sim-title-dropdown-option-container" style="color: rgb(199, 156, 110);">
+                <div class="sim-title-option dropdown-option">
                     <img src="/wotlk/assets/img/protection_warrior_icon.png" class="sim-title-icon">
-                </a>
-                <a href="/wotlk/protection_warrior/" class="sim-title-dropdown-option-container" style="color: rgb(199, 156, 110);">
                     <div class="sim-title-label-container">
                         <span class="sim-title-spec-label sim-title-label">PROTECTION WARRIOR</span>
                     </div>
-                </a>
-            </div>
-            <div class="sim-title-option dropdown-option">
-                <a href="/wotlk/deathknight/" class="">
+                </div>
+            </a>
+            <a href="/wotlk/deathknight/" class="sim-title-dropdown-option-container" style="color: rgb(194, 46, 70);">
+                <div class="sim-title-option dropdown-option">
                     <img src="/wotlk/assets/img/death_knight_icon.png" class="sim-title-icon">
-                </a>
-                <a href="/wotlk/deathknight/" class="sim-title-dropdown-option-container" style="color: rgb(194, 46, 70);">
                     <div class="sim-title-label-container">
                         <span class="sim-title-spec-label sim-title-label">DEATH KNIGHT</span>
                     </div>
-                </a>
-            </div>
-            <div class="sim-title-option dropdown-option">
-                <a href="/wotlk/tank_deathknight/" class="">
+                </div>
+            </a>
+            <a href="/wotlk/tank_deathknight/" class="sim-title-dropdown-option-container" style="color: rgb(194, 46, 70);">
+                <div class="sim-title-option dropdown-option">
                     <img src="/wotlk/assets/img/death_knight_icon.png" class="sim-title-icon">
-                </a>
-                <a href="/wotlk/tank_deathknight/" class="sim-title-dropdown-option-container" style="color: rgb(194, 46, 70);">
                     <div class="sim-title-label-container">
                         <span class="sim-title-spec-label sim-title-label">DEATH KNIGHT TANK</span>
                     </div>
-                </a>
-            </div>
+                </div>
+            </a>
         </div>
     </div>
 </body>
