--- a/ui/index.html
+++ b/ui/index.html
@@ -28,8 +28,6 @@
 
         .dropdown-option {
             flex: 0;
-            margin-top: 10px;
-            margin-left: 10px;
             display: flex;
             align-items: center;
             cursor: pointer;
@@ -46,6 +44,11 @@
             margin: 0 auto;
             flex-wrap: wrap;
             justify-content: space-evenly;
+        }
+
+        .sim-title-dropdown-option-container {
+            margin-top: 10px;
+            margin-left: 10px;
         }
 
         .dropdown-panel .sim-title-spec-label {
