Fix several crash reports

--- a/ui/index_template.html
+++ b/ui/index_template.html
@@ -33,7 +33,7 @@
   </body>
   <!-- Load wowhead scripts after done loading everything else -->
   <script>const whTooltips = {colorLinks: true};</script>
-  <script src="https://wow.zamimg.com/widgets/power.js"></script>
+  <script src="https://wow.zamimg.com/js/tooltips.js"></script>
 	<!--<script>const aowow_tooltips = {colorlinks: true}</script>
 	<script type="text/javascript" src="https://wotlk.evowow.com/static/widgets/power.js"></script>-->
 </html>
