update discord invite

--- a/ui/index.html
+++ b/ui/index.html
@@ -31,7 +31,7 @@
 								<span class="navbar-toggler-icon"></span>
 							</button>
 							<div class="collapse navbar-collapse homepage-header-collapse">
-								<a href="https://discord.com" target="_blank" class="me-3">
+								<a href="https://discord.gg/p3DgvmnDCS" target="_blank" class="me-3">
 									<p class="m-0"><i class="discord-link fa fa-brands fa-discord fa-xl"></i>&nbsp;</p>
 								</a>
 								<a href="https://github.com/wowsims/wotlk" target="_blank" class="me-3">
