prevent popping on page load

--- a/ui/index.html
+++ b/ui/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<title>WoWSims - Wrath of the Lich King</title>
@@ -6,15 +7,6 @@
 		<link rel="icon" href="/wotlk/assets/favicon_io/favicon.ico" type="image/x-icon">
 		<link rel="stylesheet" href="./index.scss">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-		<script src="./index.ts" type="module"></script>
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-T3HBB0LXNX"></script>
-		<script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag(){dataLayer.push(arguments);}
-			gtag('js', new Date());
-			gtag('config', 'G-YEJ8MEHGV2');
-		</script>
 	</head>
 	<body>
 		<div class="bg-image"></div>
@@ -271,5 +263,13 @@
 				</div>
 			</main>
     </div>
+		<script src="./index.ts" type="module"></script>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-T3HBB0LXNX"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+			gtag('config', 'G-YEJ8MEHGV2');
+		</script>
 	</body>
 </html>
